--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,7 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!-- Tally script for survey -->
+    <script async src="https://tally.so/widgets/embed.js"></script>
+    <title>San Lorenzo Nuovo Smart AppKey</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
